--- a/Binary_UWP/Views/AircraftView.xaml
+++ b/Binary_UWP/Views/AircraftView.xaml
@@ -20,11 +20,11 @@
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
         <Button Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="2" Content="Create" Click="{x:Bind ViewModel.CreateClicked}"
-                Margin="20 20 0 0" Background="LightPink">
+                Margin="20" Background="LightPink" >
             <Button.Flyout>
                 <Flyout x:Name="dialogBox" >
                     <Flyout.Content>
-                        <StackPanel >
+                        <StackPanel>
                             <TextBlock Text="AircraftName"></TextBlock>
                             <TextBox Text="{x:Bind ViewModel.Aircraft.AircraftName, Mode=TwoWay}"></TextBox>
                             <TextBlock Text="TypeAircraftId"></TextBlock>
@@ -37,13 +37,15 @@
                 </Flyout>
             </Button.Flyout>
         </Button>
+       
         <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Aircrafts, Mode=OneWay}" HorizontalAlignment="Left" 
-                  Margin="20,0,0,0" VerticalAlignment="Center" Grid.Column="0" Grid.ColumnSpan="2"
+                  Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.ColumnSpan="2"
                   IsItemClickEnabled="True"
                   ItemClick="AircraftList_ItemClick" >
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Aircraft">
-                    <Grid Tapped="ListTapped" Background="Transparent">
+                    <Grid Tapped="ListTapped" Background="Transparent" Padding="0 0 400 0" HorizontalAlignment="Left"
+                          >
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -59,7 +61,8 @@
                                    FontSize="16"
                                    Padding="0,0,0,0"
                                    Grid.Column="0"
-                                   Grid.Row="0"/>
+                                   Grid.Row="0"
+                                 TextAlignment="Left"/>
                         </Grid>
                         <FlyoutBase.AttachedFlyout  >
                             <Flyout>
@@ -69,7 +72,7 @@
                                     <TextBlock Text="TypeAircraftId"></TextBlock>
                                     <TextBox Text="{x:Bind TypeAircraftId, Mode=TwoWay}"></TextBox>
                                     <TimePicker  Time="{x:Bind Lifetime, Mode=TwoWay}" Header="Lifetime"/>
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="SaveEntity" Content="Save" Margin="0 10 10 10"></Button>
                                     <Button  Click ="DeleteEntity" Content="Delete"></Button>
                                 </StackPanel>
                             </Flyout>
