--- a/Binary_UWP/Views/CrewView.xaml
+++ b/Binary_UWP/Views/CrewView.xaml
@@ -16,11 +16,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" Margin="20" >
             <Button.Flyout>
                 <Flyout x:Name="dialogBox">
                     <Flyout.Content>
@@ -34,13 +33,13 @@
                 </Flyout>
             </Button.Flyout>
         </Button>
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Crews, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Crews, Mode=OneWay}" HorizontalAlignment="Left" 
+                  Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.ColumnSpan="2"
                   IsItemClickEnabled="True"
                   ItemClick="CrewList_ItemClick">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Crew">
-                    <Grid Tapped="ListTapped" Background="Transparent">
+                    <Grid Tapped="ListTapped" Background="Transparent"  Padding="0 0 400 0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -75,7 +74,7 @@
                                 <StackPanel>
                                     <TextBlock Text="PilotId"></TextBlock>
                                     <TextBox Text="{x:Bind PilotId, Mode=TwoWay}"></TextBox>
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="SaveEntity" Content="Save" Margin="0 10 10 10 "></Button>
                                     <Button  Click ="DeleteEntity" Content="Delete"></Button>
                                 </StackPanel>
                             </Flyout>
