--- a/Binary_UWP/Views/DepartureView.xaml
+++ b/Binary_UWP/Views/DepartureView.xaml
@@ -16,11 +16,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" Margin="20">
             <Button.Flyout>
                 <Flyout x:Name="dialogBox">
                     <Flyout.Content>
@@ -32,20 +31,20 @@
                             <TextBlock Text="CrewId"></TextBlock>
                             <TextBox Text="{x:Bind ViewModel.Departure.CrewId, Mode=TwoWay}"></TextBox>
                             <!--<TimePicker  Time="{x:Bind ViewModel.Departure.DepartureTime, Mode=TwoWay}" Header="DepartureTime"/>-->
-                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 0 0" />
-                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
+                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save"  Margin="0 10 10 10"/>
+                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 0 0 0" />
                         </StackPanel>
                     </Flyout.Content>
                 </Flyout>
             </Button.Flyout>
         </Button>
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Departures, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Departures, Mode=OneWay}" HorizontalAlignment="Left" 
+                  Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0"
                   IsItemClickEnabled="True"
-                  ItemClick="DepartureList_ItemClick">
+                  ItemClick="DepartureList_ItemClick" Grid.ColumnSpan="2">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Departure">
-                    <Grid Tapped="ListTapped" Background="Transparent">
+                    <Grid Tapped="ListTapped" Background="Transparent"  Padding="0 0 400 0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -84,7 +83,7 @@
                                     <TextBlock Text="CrewId"></TextBlock>
                                     <TextBox Text="{x:Bind CrewId, Mode=TwoWay}"></TextBox>
                                     <!--<TimePicker  Time="{x:Bind DepartureTime, Mode=TwoWay}" Header="DepartureTime"/>-->
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="SaveEntity" Content="Save"  Margin="0 10 10 10"></Button>
                                     <Button  Click ="DeleteEntity" Content="Delete"></Button>
                                 </StackPanel>
                             </Flyout>
