--- a/Binary_UWP/Views/FlightView.xaml
+++ b/Binary_UWP/Views/FlightView.xaml
@@ -31,7 +31,7 @@
                             <TimePicker  Time="{x:Bind ViewModel.Flight.ArrivalTime, Mode=TwoWay}" Header="Arrival time"/>
                             <TimePicker  Time="{x:Bind ViewModel.Flight.DepartureTime, Mode=TwoWay}" Header="Departure time"/>
                             <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0, 10, 10, 10" />
-                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
+                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 0 0 0" />
                         </StackPanel>
                     </Flyout.Content>
                 </Flyout>
@@ -44,7 +44,7 @@
                   ItemClick="FlightList_ItemClick">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Flight">
-                    <Grid Tapped="ListTapped" Background="Transparent">
+                    <Grid Tapped="ListTapped" Background="Transparent" Padding="0 0 400 0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -83,7 +83,7 @@
                                     <TextBox Text="{x:Bind DeparturePoint, Mode=TwoWay}" ></TextBox>
                                     <TimePicker  Time="{x:Bind ArrivalTime, Mode=TwoWay}" Header="Arrival time"/>
                                     <TimePicker  Time="{x:Bind DepartureTime, Mode=TwoWay}" Header="Departure time"/>
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="SaveEntity" Content="Save" Margin="0, 10, 10, 10"></Button>
                                     <Button  Click ="DeleteEntity" Content="Delete"></Button>
                                 </StackPanel>
                             </Flyout>
