--- a/Binary_UWP/Views/TicketView.xaml
+++ b/Binary_UWP/Views/TicketView.xaml
@@ -16,11 +16,10 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="1*"/>
-            <ColumnDefinition Width="3*"/>
+            <ColumnDefinition Width="2*"/>
             <ColumnDefinition Width="1*"/>
         </Grid.ColumnDefinitions>
-        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" >
+        <Button Content="Create" Click="{x:Bind ViewModel.CreateClicked}" Margin="20">
             <Button.Flyout>
                 <Flyout x:Name="dialogBox">
                     <Flyout.Content>
@@ -29,20 +28,20 @@
                             <TextBox Text="{x:Bind ViewModel.Ticket.FlightId, Mode=TwoWay}"></TextBox>
                             <TextBlock Text="Price"></TextBlock>
                             <TextBox Text="{x:Bind ViewModel.Ticket.Price, Mode=TwoWay}"></TextBox>
-                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 0 0" />
-                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 10 0 0" />
+                            <Button Click="{x:Bind ViewModel.Create}"  Content="Save" Margin="0 10 10 10" />
+                            <Button Click="ButtonClose_Click"   Content="Close" Margin="0 0 0 0" />
                         </StackPanel>
                     </Flyout.Content>
                 </Flyout>
             </Button.Flyout>
         </Button>
-        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Tickets, Mode=OneWay}" HorizontalAlignment="Center" 
-                  Margin="0,0,0,0" VerticalAlignment="Center" Grid.Column="0"
+        <ListView Grid.Row="1" ItemsSource="{x:Bind ViewModel.Tickets, Mode=OneWay}" HorizontalAlignment="Left" 
+                  Margin="20,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.ColumnSpan="2"
                   IsItemClickEnabled="True"
                   ItemClick="TicketList_ItemClick">
             <ListView.ItemTemplate>
                 <DataTemplate x:DataType="m:Ticket">
-                    <Grid Tapped="ListTapped" Background="Transparent">
+                    <Grid Tapped="ListTapped" Background="Transparent"  Padding="0 0 400 0">
                         <Grid>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="*"/>
@@ -79,7 +78,7 @@
                                     <TextBox Text="{x:Bind FlightId, Mode=TwoWay}"></TextBox>
                                     <TextBlock Text="Price"></TextBlock>
                                     <TextBox Text="{x:Bind Price, Mode=TwoWay}"></TextBox>
-                                    <Button  Click ="SaveEntity" Content="Save"></Button>
+                                    <Button  Click ="SaveEntity" Content="Save"  Margin="0 10 10 10"></Button>
                                     <Button  Click ="DeleteEntity" Content="Delete"></Button>
                                 </StackPanel>
                             </Flyout>
